# saunabot

./: .clang-format  .gitignore  CMakeLists.txt  LICENCE  README.md  config.cfg
src/: CMakeLists.txt  eventHandler.cpp  eventHandler.hpp  logger.cpp  logger.hpp  main.cpp  manager.cpp  manager.hpp  saunabot.cpp  saunabot.hpp
src/config/: configHandler.cpp  configHandler.hpp
src/eventHandler/: eventHandler.cpp  eventHandler.hpp
src/eventHandler/events/: baseEvent.hpp  beerEvent.hpp  pingEvent.hpp
src/resources/: config.hpp  constants.hpp
src/utils/: logger.cpp  logger.hpp  utils.cpp  utils.hpp
test_src/utils/: CMakeLists.txt  utilsTests.cpp
tst/: CMakeLists.txt  eventHandlerTests.cpp
tst/stubs/: loggerStub.cpp
